# signaldesk

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  openapi.yml
docs/adr/: 0001-use-monorepo.md  0002-use-layered-architecture.md  0003-use-outbox-pattern.md  0004-use-postgresql.md  0005-use-kafka-for-events.md
docs/api/: incidents.md
docs/events/: incident-events.md
infra/alembic/: env.py
infra/alembic/versions/: 07260ca935b1_add_outbox_retry_fields.py  0882d83d3dda_create_notification_tasks_table.py  127c0e454e40_create_incidents_table.py  37e8e61c3fd1_add_outbox_retry_fields.py  4c6af5c77999_add_correlation_id_to_outbox_events.py  6dc795bc4be1_create_outbox_events_table.py  f22b2011783b_add_incident_indexes.py
pgadmin/: servers.json
services/incident_api/src/incident_api/: app.py  config.py  container.py  extensions.py  logging.py  notification_worker.py  outbox_worker.py  worker_runtime.py
services/incident_api/src/incident_api/adapters/: incident_models.py  incident_repository.py  notification_models.py  notification_repository.py  outbox_repository.py
services/incident_api/src/incident_api/api/: dependencies.py  error_handlers.py  errors.py  health.py  (+6 more)
tests/integration/: conftest.py  it_incident_event_handler.py  it_outbox_publisher.py  test_incidents_api.py  test_it_observability.py  test_it_outbox_publisher.py
tests/unit/: test_health.py  test_incident_domain.py  test_outbox_publisher.py
(+10 files in other folders)
