[project]
name ="signaldesk"
version="0.1.0"
description = "Production-style incident intelligence backend built with Flask, PostgreSQL, and Kafka."
requires-python = "==3.12.0"
dependencies = [
    "alembic==1.13.0",
    "flask==3.0.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings==2.0.0",
    "sqlalchemy==2.0.0",
    "uuid6>=2025.0.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "ruff==0.6.0",
    "mypy==1.10.0",
]

[tool.setuptools.packages.find]
where = ["services/incident_api/src"]

[tool.pytest.ini_options]
pythonpath = [
    "services/incident_api/src"
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
